--- a/MLF_Final_Project.ipynb
+++ b/MLF_Final_Project.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "<img src=\"https://z3.ax1x.com/2021/06/22/RezGjA.png\" style=\"\" width=\"500\">\n",
     "\n",
-    "<img src=\"https://github.com/Harveydentsun/MLF_2021_Final_Project/blob/main/reference/Baseline.png\" style=\"\" width=\"600\">\n",
+    "<img src=\"reference/Model.png\" style=\"\" width=\"600\">\n",
     "\n",
     "where BN represents Batch Normalization."
    ]
@@ -1175,7 +1175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"reference/baseline.png\" style=\"\" width=\"900\">"
+    "<img src=\"reference/Baseline.png\" style=\"\" width=\"900\">"
    ]
   },
   {
@@ -2276,7 +2276,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"reference/model.png\" style=\"\" width=\"900\">"
+    "<img src=\"reference/Model.png\" style=\"\" width=\"900\">"
    ]
   },
   {
