--- a/MLF_Final_Project.ipynb
+++ b/MLF_Final_Project.ipynb
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*This project comes from the inspiration of [Huatai Securities' AlphaNet quantitative report](reference/华泰人工智能系列三十二：alphanet：因子挖掘神经网络_2020-06-15_华泰证券.pdf).*"
+    "*This project comes from the inspiration of [Huatai Securities' AlphaNet quantitative report](./reference/华泰人工智能系列三十二：alphanet：因子挖掘神经网络_2020-06-15_华泰证券.pdf).*"
    ]
   },
   {
