--- a/MLF_Final_Project.ipynb
+++ b/MLF_Final_Project.ipynb
@@ -3174,7 +3174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>⭐Our StockSelector-Beta did even better than StockSelector-Alpha, outperforming market index by 33 percent!⭐</b>"
+    "<b>⭐Our LSTM model did even better than CNN model, outperforming market index by 43 percent!⭐</b>"
    ]
   },
   {
@@ -3185,9 +3185,9 @@
     "\n",
     "Both models, CNN Model and LSTM Model, defeat benchmark index tremendously. Furthermore, even canonical factor models can’t yield comparable performance to the deep learning models. \n",
     "\n",
-    "LSTM Model considers features’ temporal information and outperform StockSelector-Alpha. \n",
+    "LSTM Model considers features' temporal information and outperform CNN model. \n",
     "\n",
-    "LSTM Model is built on LSTM and hence time ordering matters but StockSelector-Alpha is purely based on dense layers and is time-agnostic.\n",
+    "LSTM Model is built on LSTM and hence time ordering matters but CNN is purely based on dense layers and is time-agnostic.\n",
     "\n",
     "The outperformance of temporal neural network reveals that having temporal information is essential in prediction stock returns. We encourage portfolio managers to leverage the temporal information and dig out alphas hidden inside the data."
    ]
