--- a/MLF_Final_Project.ipynb
+++ b/MLF_Final_Project.ipynb
@@ -2738,7 +2738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -3143,7 +3143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>⭐Our CNN Model beats the benchmark by almost 40 percent!⭐</b> \n",
+    "<b>⭐Our CNN Model beats the benchmark by more than 40 percent!⭐</b> \n",
     "\n",
     "That's a pretty good result!\n",
     "\n",
