--- a/MLF_Final_Project.ipynb
+++ b/MLF_Final_Project.ipynb
@@ -2156,9 +2156,9 @@
     "\n",
     "Type Two: ts_mean, ts_stddev, ts_zscore, ts_return, ts_decaylinear\n",
     "\n",
-    "<img src=\"https://z3.ax1x.com/2021/07/23/WsQEVA.png\" style=\"\" width=\"600\">\n",
+    "<img src=\"reference/Figure%203%20new.png\" style=\"\" width=\"600\">\n",
     "\n",
-    "<img src=\"https://z3.ax1x.com/2021/07/23/WsQNGV.png\" style=\"\" width=\"600\">"
+    "<img src=\"reference/Figure%204%20new.png\" style=\"\" width=\"600\">"
    ]
   },
   {
@@ -2199,7 +2199,7 @@
     "\n",
     "The realization of figure 2 is more like a combined pipeline function described below.\n",
     "\n",
-    "<img src=\"https://z3.ax1x.com/2021/07/23/Wrg3RK.png\" style=\"\" width=\"600\">\n",
+    "<img src=\"reference/Figure%205%20new.png\" style=\"\" width=\"600\">\n",
     "\n",
     "<b>`All the python code is reported in feature_extraction.py in the attachment.`</b>"
    ]
