--- a/MLF_Final_Project.ipynb
+++ b/MLF_Final_Project.ipynb
@@ -3575,7 +3575,7 @@
     "\n",
     "Although baseline model and LSTM Model do not beat benchmark index obviously, we are absolutely sure that our CNN model defeats benchmark index tremendously. Furthermore, even canonical factor models can’t yield comparable performance to the deep learning models. \n",
     "\n",
-    "The outperformance of our CNN neural network reveals that feature engineering is essential in prediction stock returns. We encourage portfolio managers to leverage the feature information implied by public information and dig out alphas hidden inside the data."
+    "The outperformance of our CNN neural network reveals that feature engineering is essential in prediction stock returns. We encourage portfolio managers to leverage the features implied by public information and dig out alphas hidden inside the data."
    ]
   },
   {
